# genai-engineering-lab

./: .gitignore  learning.txt
chatbot-with-web-seach-tool/: README.md  package-lock.json  package.json
chatbot-with-web-seach-tool/backend/: chatbot.js  server.js
chatbot-with-web-seach-tool/frontend/: index.html  index.js
coding-bot/: README.md  main.py  pyproject.toml  tools.py
drive-webhook-rag/: .env.example  .gitignore  README.md  config.py  docker-compose.yaml  drive_client.py  embedder.py  main.py  pyproject.toml  setup.py  watcher.py
metadata-filtering/: main.py  pyproject.toml
metadata-filtering/chroma_db/: chroma.sqlite3
simple-pdf-rag/: .gitignore  README.md  chatbot.py  drive_ingest_pdf.py  ingest_pdf.py  pyproject.toml
simple-pdf-rag/chroma_db/: chroma.sqlite3
