[project]
name = "drive-webhook-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.48.0",
]
